--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
    <header>
-<img src="" alt="">
+      <h1>ENCRIPTADOR</h1>
+      <p>⛔ Sólo letras sin acentos y sin caracteres especiales</p>
    </header>
    <main>
 
