terminado sin redes sociales

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Encriptador Alura">
+   <meta name="keywords" content="Encriptador propuesto como desafío del curso para principiantes de ALURA">
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="reset.css">
+   <link rel="icon" href="./img/icon.png">
    <title>Encriptador</title>
 </head>
 <body>
@@ -27,11 +30,11 @@
       
       <section>
          <div class="botones">
-            <button class="encriptar button color-input" onclick="btnEncriptar()">Encriptar  ==> </button>
+            <button class="encriptar button color-input" onclick="btnEncriptar()">Encriptar >>></button>
             <button class="copiar button color-output" onclick="btnCopiarOriginal()">Copiar Original</button>
             <button class="borrar button color-input" onclick="btnBorrar()">Borrar tableros</button>
             <button class="copiar button color-output" onclick="btnCopiarEncriptado()">Copiar Encriptado</button>
-            <button class="desencriptar button color-output" onclick="btnDesencriptar()"><==  Desencriptar</button>
+            <button class="desencriptar button color-output" onclick="btnDesencriptar()"><<< Desencriptar</button>
          </div>
       </section>
       
