--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <meta name="keywords" content="Encriptador propuesto como desafío del curso para principiantes de ALURA">
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="reset.css">
+   <link rel="stylesheet" href="redes.css">
    <link rel="icon" href="./img/icon.png">
    <title>Encriptador</title>
 </head>
@@ -44,7 +45,25 @@
 
    </main>
    <footer>
-      <p class="copyright">&copy Copyright - ENCRIPTADOR - 2022</p>
+      <div>
+         <span>
+            <a target="blanck" href="https://facebook.com"><img src="./img/facebook.png" id="facebook"></a>
+         </span>
+         <span>
+            <a target="blanck" href="https://github.com/JulioLaz"><img src="./img/github.png" id="github"></a>
+         </span>
+         <span>
+            <a target="blanck" href="https://instagram.com"><img src="./img/instagram.png" id="instagram"></a>
+         </span>
+         <span>
+            <a target="blanck" href="https://linkelin.com"><img src="./img/linkedin.png" id="linkedin"></a>
+         </span>
+         <span>
+            <a target="blanck" href="https://twitter.com/home"><img src="./img/twitter.png" id="twitter"></a>
+         
+         </span>
+      </div>
+      <p class="copyright">&copy Copyright - ENCRIPTADOR / 2022 - Autor JAL - Agradecimientos: ALURA TEAM</p>
    </footer>
    <script src="script.js"></script>
 </body>
