--- a/index.html
+++ b/index.html
@@ -42,28 +42,38 @@
       <section class="">
          <textarea class="borrador" cols="30" rows="5" placeholder="texto copiado..."></textarea>
       </section> 
-
    </main>
+
    <footer>
       <div>
          <span>
-            <a target="blanck" href="https://facebook.com"><img src="./img/facebook.png" id="facebook"></a>
+            <a target="blanck" href="https://www.facebook.com/profile.php?id=100009817426057
+            "><img src="./img/facebook.png" id="facebook"></a>
          </span>
+
          <span>
             <a target="blanck" href="https://github.com/JulioLaz"><img src="./img/github.png" id="github"></a>
          </span>
+
          <span>
-            <a target="blanck" href="https://instagram.com"><img src="./img/instagram.png" id="instagram"></a>
+            <a target="blanck" href="https://www.linkedin.com/in/julio-lazarte-349468248?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BubU1fpKpQi6Kp7t%2FBq5AtA%3D%3D"><img src="./img/linkedin.png" id="linkedin"></a>
          </span>
-         <span>
-            <a target="blanck" href="https://linkelin.com"><img src="./img/linkedin.png" id="linkedin"></a>
-         </span>
+
          <span>
             <a target="blanck" href="https://twitter.com/home"><img src="./img/twitter.png" id="twitter"></a>
+         </span>
          
+         <span>
+            <a target="blanck" href="https://www.aluracursos.com/"><img src="./img/alura.png" id="alura"></a>
          </span>
       </div>
-      <p class="copyright">&copy Copyright - ENCRIPTADOR / 2022 - Autor JAL - Agradecimientos: ALURA TEAM</p>
+      
+      <div>
+         <span>
+            <p class="copyright">&copy Copyright - ENCRIPTADOR / 2022 - Autor: Julio A. Lazarte - Argentina - Agradecimientos : "ALURA TEAM"
+         </p>
+         </span>
+      </div>
    </footer>
    <script src="script.js"></script>
 </body>
